--- a/DownloadRedditImages/appsettings.json
+++ b/DownloadRedditImages/appsettings.json
@@ -1,4 +1,4 @@
 ﻿{
-    "OutputDirectory": "E:\\Media\\Porn\\Reddit",
-    "PerceptualHashSimilarityThreshold": 99.5
+    "OutputDirectory": ".",
+    "MaxHammingDistance": 0
 }
