--- a/DownloadRedditImages/DownloadRedditImages.csproj
+++ b/DownloadRedditImages/DownloadRedditImages.csproj
@@ -5,7 +5,7 @@
         <LangVersion>latest</LangVersion>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <OutputType>Exe</OutputType>
-        <Nullable>disable</Nullable>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
