--- a/DownloadRedditImages/appsettings.json
+++ b/DownloadRedditImages/appsettings.json
@@ -1,4 +1,13 @@
 ﻿{
-    "DownloadDirectory": ".",
-    "MaxHammingDistance": 0
+  // Where user images will be downloaded.
+  "DownloadDirectory": ".",
+
+  // Increasing this will make duplicate filtering more aggressive.
+  "MaxHammingDistance": 0,
+
+  // Parallelizes image fetches. Beyond about 4-8, has no effect, because Pushshift API metadata fetches become a bottleneck, and this is not parallelized.
+  "MaxParallelism": 4,
+
+  // Possible values are Verbose, Debug, Information, Warning, Error, and Fatal.
+  "MinimumLogEventLevel": "Information"
 }
