--- a/DownloadRedditImages/DownloadRedditImages.csproj
+++ b/DownloadRedditImages/DownloadRedditImages.csproj
@@ -7,12 +7,14 @@
         <OutputType>Exe</OutputType>
         <Nullable>enable</Nullable>
         <PackAsTool>true</PackAsTool>
-        <Version>1.1.0</Version>
+        <Version>1.2.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Crc32.NET" Version="1.2.0" />
       <PackageReference Include="MimeTypeMapOfficial" Version="1.0.17" />
+      <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
       <PackageReference Include="Shipwreck.Phash" Version="0.5.0" />
       <PackageReference Include="Shipwreck.Phash.Bitmaps" Version="0.5.0" />
     </ItemGroup>
